added more custom styles and found customization abilities with ant design

--- a/frontend/app/src/styles/styles.scss
+++ b/frontend/app/src/styles/styles.scss
@@ -7,38 +7,56 @@ $enable-shadows: true;
 $offcanvas-box-shadow: 0 1rem 3rem rgba(0, 0, 0, 0.175);
 
 // Include functions first
-@import 'bootstrap/scss/functions';
+@import "bootstrap/scss/functions";
 
 // Customize some defaults
 $text: #00050a;
 $background: #ffffff;
 $primary: #00674f;
 $secondary: #7789f4;
-$warning: #d86364;
-
-//add more commonly used classes here to be able to write them quicker
-.flex {
-  display: flex;
-}
+$accent: #d86364;
+$text-contrast: #64d97b;
+$bg-contrast: #64d97b;
+$primary-contrast: #ffdd00;
+$secondary-contrast: #ffdd00;
+$accent-contrast: #ffdd00;
+$text5: hsl(210, 100%, 2%, 5%);
+$text50: hsl(210, 100%, 2%, 50%);
+$text95: hsl(210, 100%, 2%, 95%);
+$primary5: hsl(166, 100%, 20%, 5%);
+$primary50: hsl(166, 100%, 20%, 50%);
+$primary95: hsl(166, 100%, 20%, 95%);
+$secondary5: hsl(231, 85%, 71%, 5%);
+$secondary50: hsl(231, 85%, 71%, 50%);
+$secondary95: hsl(231, 85%, 71%, 95%);
+$accent5: hsl(359, 60%, 62%, 5%);
+$accent50: hsl(359, 60%, 62%, 50%);
+$accent95: hsl(359, 60%, 62%, 95%);
+$linearPrimarySecondary: linear-gradient(#00674f, #7789f4);
+$linearPrimaryAccent: linear-gradient(#00674f, #d86364);
+$linearSecondaryAccent: linear-gradient(#7789f4, #d86364);
+$radialPrimarySecondary: radial-gradient(#00674f, #7789f4);
+$radialPrimaryAccent: radial-gradient(#00674f, #d86364);
+$radialSecondaryAccent: radial-gradient(#7789f4, #d86364);
 
 // Required
-@import 'bootstrap/scss/variables';
-@import 'bootstrap/scss/variables-dark';
-@import 'bootstrap/scss/maps';
-@import 'bootstrap/scss/mixins';
-@import 'bootstrap/scss/utilities';
-@import 'bootstrap/scss/root';
-@import 'bootstrap/scss/reboot';
+@import "bootstrap/scss/variables";
+@import "bootstrap/scss/variables-dark";
+@import "bootstrap/scss/maps";
+@import "bootstrap/scss/mixins";
+@import "bootstrap/scss/utilities";
+@import "bootstrap/scss/root";
+@import "bootstrap/scss/reboot";
 
-@import 'bootstrap/scss/type';
+@import "bootstrap/scss/type";
 // @import "bootstrap/scss/images";
-@import 'bootstrap/scss/containers';
-@import 'bootstrap/scss/grid';
+@import "bootstrap/scss/containers";
+@import "bootstrap/scss/grid";
 // @import "bootstrap/scss/tables";
 // @import "bootstrap/scss/forms";
-@import 'bootstrap/scss/buttons';
-@import 'bootstrap/scss/transitions';
-@import 'bootstrap/scss/dropdown';
+@import "bootstrap/scss/buttons";
+@import "bootstrap/scss/transitions";
+@import "bootstrap/scss/dropdown";
 // @import "bootstrap/scss/button-group";
 // @import "bootstrap/scss/nav";
 // @import "bootstrap/scss/navbar"; // Requires nav
@@ -50,26 +68,63 @@ $warning: #d86364;
 // @import "bootstrap/scss/alert";
 // @import "bootstrap/scss/progress";
 // @import "bootstrap/scss/list-group";
-@import 'bootstrap/scss/close';
+@import "bootstrap/scss/close";
 // @import "bootstrap/scss/toasts";
-@import 'bootstrap/scss/modal'; // Requires transitions
+@import "bootstrap/scss/modal"; // Requires transitions
 // @import "bootstrap/scss/tooltip";
-@import 'bootstrap/scss/popover';
+@import "bootstrap/scss/popover";
 // @import "bootstrap/scss/carousel";
 // @import "bootstrap/scss/spinners";
-@import 'bootstrap/scss/offcanvas'; // Requires transitions
+@import "bootstrap/scss/offcanvas"; // Requires transitions
 // @import "bootstrap/scss/placeholders";
 
 // Helpers
 // @import "bootstrap/scss/helpers";
 
 // Utilities
-@import 'bootstrap/scss/utilities/api';
+@import "bootstrap/scss/utilities/api";
 
 //
 // Custom styles
 //
 
+:root {
+  font-family: system-ui, Avenir, Helvetica, Arial, sans-serif;
+  line-height: 1.5;
+  font-weight: 400;
+
+  font-synthesis: none;
+  text-rendering: optimizeLegibility;
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
+}
+
 body {
-  padding: 1.5rem;
+  margin: 0;
+  display: flex;
+  place-items: center;
+  min-width: 320px;
+  min-height: 100vh;
+}
+
+//add more commonly used classes here to be able to write them quicker
+.flex {
+  display: flex;
+}
+
+.card-primary {
+  // background-color: $primary-5;
+  background: $primary5;
+}
+
+.card-secondary {
+  background: $secondary50;
+}
+
+.card-accent {
+  background: $accent95;
+}
+
+.table {
+  background: $secondary5;
 }
