changed scss class for table to avoid conflicts per @dailydisco's request that I cannot see for some reason

--- a/frontend/app/src/styles/styles.scss
+++ b/frontend/app/src/styles/styles.scss
@@ -171,7 +171,7 @@ body {
 // Potentially
 // Tooltip
 
-.table-container {
+.lease-table-container {
     display: flex;
     align-items: center;
     gap: 10px; // Adjust spacing as needed
