--- a/frontend/app/src/styles/styles.scss
+++ b/frontend/app/src/styles/styles.scss
@@ -137,9 +137,12 @@ body {
 
 .flex-container {
     display: flex;
+    flex-wrap: wrap;
     flex-direction: row;
+    overflow: hidden;
     gap: 2rem;
     align-items: stretch;
+    justify-content: center;
 }
 
 .alert-container {
@@ -159,6 +162,7 @@ body {
     display: flex;
     flex-direction: column;
     justify-content: space-between;
+    align-items: center;
     text-align: center;
 }
 
@@ -200,6 +204,47 @@ body {
 .icon {
     font-size: 24px;
     margin-bottom: 16px;
+}
+
+.btn {
+    display: inline-flex !important;
+}
+
+.footer {
+    text-align: center;
+    padding: 24px 50px;
+}
+
+.footer-title {
+    margin: 0 0 16px 0;
+    color: #1a1a1a;
+}
+
+.footer-logo {
+    margin: 1rem auto;
+    border-radius: 8px;
+}
+
+.link {
+    padding: 0 16px;
+    color: #595959;
+    text-decoration: none;
+}
+
+.footer-text {
+    margin: 0;
+    color: #8c8c8c;
+    font-size: 14px;
+}
+
+.header {
+    position: sticky;
+    top: 0;
+    z-index: 1;
+    width: 100%;
+    display: flex;
+    align-items: center;
+    background-color: #00674f;
 }
 
 // Text Sizes
