--- a/frontend/app/src/styles/styles.scss
+++ b/frontend/app/src/styles/styles.scss
@@ -108,7 +108,7 @@ $radialSecondaryAccent: radial-gradient(#7789f4, #d86364);
 //
 
 :root {
-    font-family: system-ui, Avenir, Helvetica, Arial, sans-serif;
+    font-family: "Poppins", sans-serif !important;
     line-height: 1.5;
     font-weight: 400;
 
@@ -245,8 +245,9 @@ body {
 .header {
     position: sticky;
     top: 0;
-    z-index: 1;
-    padding: 2% 2%;
+    z-index: 99999;
+    padding: 30px;
+    height: 4rem;
     width: 100%;
     display: flex;
     align-items: center;
